fix systemd double quote